Estructurando el proyecto de ecommerce

--- a/index.html
+++ b/index.html
@@ -21,14 +21,42 @@
     </nav>
 
     <section>
-        <h2>Nuestros Productos</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem eligendi inventore reprehenderit repellendus voluptatum vitae sed dolorem soluta excepturi officiis id placeat, deserunt minima velit vero officia tenetur qui sapiente.</p>
+        <h2>Categorías de Productos</h2>
+
+        <div>
+            <img src="img/categoria1.jpg" alt="Imagen Categoria">
+            <a href="#">Oficina</a>
+        </div>
+
+        <div>
+            <img src="img/categoria2.jpg" alt="Imagen Categoria">
+            <a href="#">Hogar</a>
+        </div>
+        
+        <div>
+            <img src="img/categoria3.jpg" alt="Imagen Categoria">
+            <a href="#">Cocina</a>
+        </div>
 
     </section>
 
-    <h2>Categorías de Productos</h2>
+    <section>
+        <div>
+            <h2>Sobre Nosotros</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati amet tempore aliquid harum porro labore ex, dignissimos quo, similique eum possimus maxime consequatur ducimus omnis facilis, necessitatibus est architecto pariatur!</p>
+        </div>
+    </section>
 
-    <img src="img/categoria1.jpg" alt="Imagen Categoria">
+    <main>
+        <h2>Nuestros Productos</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem eligendi inventore reprehenderit repellendus voluptatum vitae sed dolorem soluta excepturi officiis id placeat, deserunt minima velit vero officia tenetur qui sapiente.</p>
+    </main>
+
+    <footer>
+        <p>Todos los derechos reservados, TiendaMuebles</p>
+    </footer>
+
+
     
 </body>
 </html>
