--- a/index.html
+++ b/index.html
@@ -49,7 +49,20 @@
 
     <main>
         <h2>Nuestros Productos</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem eligendi inventore reprehenderit repellendus voluptatum vitae sed dolorem soluta excepturi officiis id placeat, deserunt minima velit vero officia tenetur qui sapiente.</p>
+
+        <div>
+            <div>
+                <img src="img/producto1.jpg" alt="Imagen Producto">
+                <div>
+                    <h3>Producto 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis sunt aspernatur incidunt neque labore autem eius tenetur, obcaecati repudiandae, iste natus saepe nulla eos voluptates totam enim ipsum. Iste, natus.</p>
+                    <p>$1,000,000.00</p>
+
+                    <button type="button">Agregar al Carrito</button>
+                </div>
+            </div>
+        </div>
+        
     </main>
 
     <footer>
