--- a/index.html
+++ b/index.html
@@ -50,19 +50,37 @@
     <main>
         <h2>Nuestros Productos</h2>
 
+
         <div>
             <div>
                 <img src="img/producto1.jpg" alt="Imagen Producto">
+
                 <div>
                     <h3>Producto 1</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis sunt aspernatur incidunt neque labore autem eius tenetur, obcaecati repudiandae, iste natus saepe nulla eos voluptates totam enim ipsum. Iste, natus.</p>
                     <p>$1,000,000.00</p>
 
                     <button type="button">Agregar al Carrito</button>
-                </div>
-            </div>
-        </div>
-        
+                </div> <!-- Info Producto -->
+            </div> <!-- Producto -->
+
+        </div> <!-- Fin de Listado de Productos -->
+
+        <div>
+            <div>
+                <img src="img/producto2.jpg" alt="Imagen Producto">
+
+                <div>
+                    <h3>Producto 2</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis sunt aspernatur incidunt neque labore autem eius tenetur, obcaecati repudiandae, iste natus saepe nulla eos voluptates totam enim ipsum. Iste, natus.</p>
+                    <p>$1,000,000.00</p>
+
+                    <button type="button">Agregar al Carrito</button>
+                </div> <!-- Info Producto -->
+            </div> <!-- Producto -->
+            
+        </div> <!-- Fin de Listado de Productos -->
+
     </main>
 
     <footer>
