--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>e-commerce</title>
+    <title>e-commerce - Home</title>
+    <link rel="stylesheet" href="css/style.css">
 
-    <style>
-
-    </style>
+    <!-- <style>
+            Aquí podríamos poner nuesta config de estilos pero es una mala práctica.
+    </style>-->
     
 </head>
 <body>
