--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Tienda de Muebles</h1>
     </header>
 
-    <nav>
+    <nav class="navegacion">
         <a href="index.html">Inicio</a>
         <a href="nosotros.html">Nosotros</a>
         <a href="tienda.html">Tienda</a>
@@ -153,7 +153,7 @@
         <div>
             <h3>Categorías</h3>
 
-            <nav>
+            <nav id="navegacion">
                 <a href="#">Cocina</a>
                 <a href="#">Oficina</a>
                 <a href="#">Jardín</a>
@@ -165,7 +165,7 @@
         <div>
             <h3>Sobre Nosotros</h3>
 
-            <nav>
+            <nav class="navegacion">
                 <a href="#">Nuestra Historia</a>
                 <a href="#">Misión, Visión y Valores</a>
                 <a href="#">Carreras</a>
