Aplicando Box Model al CSS

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 </head>
 <body>
     <header>
-        <h1>Tienda de Muebles</h1>
+        <h1 class="nobmre-sitio">Tienda <span>Muebles</span></h1>
     </header>
 
     <nav class="navegacion">
-        <a href="index.html">Inicio</a>
-        <a href="nosotros.html">Nosotros</a>
-        <a href="tienda.html">Tienda</a>
-        <a href="blog.html">Blog</a>
-        <a href="galeria.html">Galeria</a>
-        <a href="contacto.html">Contacto</a>
+        <a class="enlace" href="index.html">Inicio</a>
+        <a class="enlace" href="nosotros.html">Nosotros</a>
+        <a class="enlace" href="tienda.html">Tienda</a>
+        <a class="enlace" href="blog.html">Blog</a>
+        <a class="enlace" href="galeria.html">Galeria</a>
+        <a class="enlace" href="contacto.html">Contacto</a>
     </nav>
 
     <section>
@@ -46,7 +46,7 @@
 
     </section>
 
-    <section>
+    <section class="sobre-nosotros">
         <div>
             <h2>Sobre Nosotros</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati amet tempore aliquid harum porro labore ex, dignissimos quo, similique eum possimus maxime consequatur ducimus omnis facilis, necessitatibus est architecto pariatur!</p>
