--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
         </div>
     </section>
 
+    <section class="sobre-empresa">
+        <div>
+            <h2>Sobre la Empresa</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati amet tempore aliquid harum porro labore ex, dignissimos quo, similique eum possimus maxime consequatur ducimus omnis facilis, necessitatibus est architecto pariatur!</p>
+        </div>
+    </section>
+
     <main>
         <h2>Nuestros Productos</h2>
 
