026_Imagenes como Background en CSS

--- a/index.html
+++ b/index.html
@@ -18,14 +18,20 @@
         <h1 class="nobmre-sitio">Tienda <span>Muebles</span></h1>
     </header>
 
-    <nav class="navegacion">
-        <a class="enlace" href="index.html">Inicio</a>
-        <a class="enlace" href="nosotros.html">Nosotros</a>
-        <a class="enlace" href="tienda.html">Tienda</a>
-        <a class="enlace" href="blog.html">Blog</a>
-        <a class="enlace" href="galeria.html">Galeria</a>
-        <a class="enlace" href="contacto.html">Contacto</a>
-    </nav>
+    <div class="contenedor-navegacion">
+        <nav class="nav-principal contenedor">
+            <a href="index.html">Inicio</a>
+            <a href="nosotros.html">Nosotros</a>
+            <a href="tienda.html">Tienda</a>
+            <a href="blog.html">Blog</a>
+            <a href="galeria.html">Galeria</a>
+            <a href="contacto.html">Contacto</a>
+        </nav>
+    </div>
+
+
+
+    <div class="hero"></div>
 
     <section>
         <h2>Categorías de Productos</h2>
