36 Creando la sección Nosotros

--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
     </section>
 
     <section class="sobre-nosotros">
-        <div>
-            <h2>Sobre Nosotros</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati amet tempore aliquid harum porro labore ex, dignissimos quo, similique eum possimus maxime consequatur ducimus omnis facilis, necessitatibus est architecto pariatur!</p>
+        <div class="contenedor sobre-nosotros-grid">
+            <div class="texto-nosotros">
+                <h2>Sobre Nosotros</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati amet tempore aliquid harum porro labore ex, dignissimos quo, similique eum possimus maxime consequatur ducimus omnis facilis, necessitatibus est architecto pariatur!</p>
+            </div>
         </div>
     </section>
 
