--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="hero"></div>
 
     <section class="contenedor categorias">
-        <h2>Categorías de Productos</h2>
+        <h2 class="text-center">Categorías de Productos</h2>
 
         <div class="listado-categorias">
             <div class="categoria">
@@ -73,18 +73,17 @@
         </div>
     </section>
 
-    <main>
-        <h2>Nuestros Productos</h2>
+    <main class="contenido-principal contenedor">
+        <h2 class="text-center">Nuestros Productos</h2>
 
-
-        <div>
-            <div>
+        <div class="listado-productos">
+            <div class="producto">
                 <img src="img/producto1.jpg" alt="Imagen Producto">
 
-                <div>
+                <div class="texto-producto">
                     <h3>Producto 1</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis sunt aspernatur incidunt neque labore autem eius tenetur, obcaecati repudiandae, iste natus saepe nulla eos voluptates totam enim ipsum. Iste, natus.</p>
-                    <p>$1,000,000.00</p>
+                    <p class="precio">$1,000,000.00</p>
 
                     <a href="#">Agregar al Carrito</a>
                 </div> <!-- Info Producto -->
@@ -93,26 +92,26 @@
         </div> <!-- Fin de Listado de Productos -->
 
         <div>
-            <div>
+            <div class="producto">
                 <img src="img/producto2.jpg" alt="Imagen Producto">
 
-                <div>
+                <div class="texto-producto">
                     <h3>Producto 2</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis sunt aspernatur incidunt neque labore autem eius tenetur, obcaecati repudiandae, iste natus saepe nulla eos voluptates totam enim ipsum. Iste, natus.</p>
-                    <p>$1,000,000.00</p>
+                    <p class="precio">$1,000,000.00</p>
 
                     <a href="#">Agregar al Carrito</a>
                 </div> <!-- Info Producto -->
             </div> <!-- Producto -->
 
             <div>
-                <div>
+                <div class="producto">
                     <img src="img/producto3.jpg" alt="Imagen Producto">
     
-                    <div>
+                    <div class="texto-producto">
                         <h3>Producto 3</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis sunt aspernatur incidunt neque labore autem eius tenetur, obcaecati repudiandae, iste natus saepe nulla eos voluptates totam enim ipsum. Iste, natus.</p>
-                        <p>$1,000,000.00</p>
+                        <p class="precio">$1,000,000.00</p>
     
                         <a href="#">Agregar al Carrito</a>
                     </div> <!-- Info Producto -->
@@ -123,13 +122,13 @@
         </div> <!-- Fin de Listado de Productos -->
 
         <div>
-            <div>
+            <div class="producto">
                 <img src="img/producto4.jpg" alt="Imagen Producto">
 
-                <div>
+                <div class="texto-producto">
                     <h3>Producto 4</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis sunt aspernatur incidunt neque labore autem eius tenetur, obcaecati repudiandae, iste natus saepe nulla eos voluptates totam enim ipsum. Iste, natus.</p>
-                    <p>$1,000,000.00</p>
+                    <p class="precio">$1,000,000.00</p>
 
                     <a href="#">Agregar al Carrito</a>
                 </div> <!-- Info Producto -->
@@ -138,13 +137,13 @@
         </div> <!-- Fin de Listado de Productos -->
 
         <div>
-            <div>
+            <div class="producto">
                 <img src="img/producto5.jpg" alt="Imagen Producto">
 
-                <div>
+                <div class="texto-producto">
                     <h3>Producto 5</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis sunt aspernatur incidunt neque labore autem eius tenetur, obcaecati repudiandae, iste natus saepe nulla eos voluptates totam enim ipsum. Iste, natus.</p>
-                    <p>$1,000,000.00</p>
+                    <p class="precio">$1,000,000.00</p>
 
                     <a href="#">Agregar al Carrito</a>
                 </div> <!-- Info Producto -->
@@ -153,13 +152,13 @@
         </div> <!-- Fin de Listado de Productos -->
 
         <div>
-            <div>
+            <div class="producto">
                 <img src="img/producto6.jpg" alt="Imagen Producto">
 
-                <div>
+                <div class="texto-producto">
                     <h3>Producto 6</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis sunt aspernatur incidunt neque labore autem eius tenetur, obcaecati repudiandae, iste natus saepe nulla eos voluptates totam enim ipsum. Iste, natus.</p>
-                    <p>$1,000,000.00</p>
+                    <p class="precio">$1,000,000.00</p>
 
                     <a href="#">Agregar al Carrito</a>
                 </div> <!-- Info Producto -->
