389 Finalizando los Productos

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis sunt aspernatur incidunt neque labore autem eius tenetur, obcaecati repudiandae, iste natus saepe nulla eos voluptates totam enim ipsum. Iste, natus.</p>
                     <p class="precio">$1,000,000.00</p>
 
-                    <a href="#">Agregar al Carrito</a>
+                    <a class ="btn" href="#">Agregar al Carrito</a>
                 </div> <!-- Info Producto -->
             </div> <!-- Producto -->
 
@@ -100,7 +100,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis sunt aspernatur incidunt neque labore autem eius tenetur, obcaecati repudiandae, iste natus saepe nulla eos voluptates totam enim ipsum. Iste, natus.</p>
                     <p class="precio">$1,000,000.00</p>
 
-                    <a href="#">Agregar al Carrito</a>
+                    <a class ="btn" href="#">Agregar al Carrito</a>
                 </div> <!-- Info Producto -->
             </div> <!-- Producto -->
 
@@ -113,7 +113,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis sunt aspernatur incidunt neque labore autem eius tenetur, obcaecati repudiandae, iste natus saepe nulla eos voluptates totam enim ipsum. Iste, natus.</p>
                         <p class="precio">$1,000,000.00</p>
     
-                        <a href="#">Agregar al Carrito</a>
+                        <a class ="btn" href="#">Agregar al Carrito</a>
                     </div> <!-- Info Producto -->
                 </div> <!-- Producto -->
     
@@ -130,7 +130,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis sunt aspernatur incidunt neque labore autem eius tenetur, obcaecati repudiandae, iste natus saepe nulla eos voluptates totam enim ipsum. Iste, natus.</p>
                     <p class="precio">$1,000,000.00</p>
 
-                    <a href="#">Agregar al Carrito</a>
+                    <a class ="btn" href="#">Agregar al Carrito</a>
                 </div> <!-- Info Producto -->
             </div> <!-- Producto -->
 
@@ -145,7 +145,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis sunt aspernatur incidunt neque labore autem eius tenetur, obcaecati repudiandae, iste natus saepe nulla eos voluptates totam enim ipsum. Iste, natus.</p>
                     <p class="precio">$1,000,000.00</p>
 
-                    <a href="#">Agregar al Carrito</a>
+                    <a class ="btn" href="#">Agregar al Carrito</a>
                 </div> <!-- Info Producto -->
             </div> <!-- Producto -->
 
@@ -160,7 +160,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis sunt aspernatur incidunt neque labore autem eius tenetur, obcaecati repudiandae, iste natus saepe nulla eos voluptates totam enim ipsum. Iste, natus.</p>
                     <p class="precio">$1,000,000.00</p>
 
-                    <a href="#">Agregar al Carrito</a>
+                    <a class ="btn" href="#">Agregar al Carrito</a>
                 </div> <!-- Info Producto -->
             </div> <!-- Producto -->
 
