--- a/index.html
+++ b/index.html
@@ -151,39 +151,41 @@
         </div> <!-- Fin de Listado de Productos -->
     </main>
 
-    <footer>
-        <div>
-            <h3>Categorías</h3>
+    <footer class="site-footer">
+        <div class="grid-footer contenedor">
+            <div>
+                <h3>Categorías</h3>
 
-            <nav id="navegacion">
-                <a href="#">Cocina</a>
-                <a href="#">Oficina</a>
-                <a href="#">Jardín</a>
-                <a href="#">Cocheras</a>
-                <a href="#">Dormitorios</a>
-            </nav>
-        </div>
+                <nav id="navegacion">
+                    <a href="#">Cocina</a>
+                    <a href="#">Oficina</a>
+                    <a href="#">Jardín</a>
+                    <a href="#">Cocheras</a>
+                    <a href="#">Dormitorios</a>
+                </nav>
+            </div>
 
-        <div>
-            <h3>Sobre Nosotros</h3>
+            <div>
+                <h3>Sobre Nosotros</h3>
 
-            <nav class="navegacion">
-                <a href="#">Nuestra Historia</a>
-                <a href="#">Misión, Visión y Valores</a>
-                <a href="#">Carreras</a>
-                <a href="#">Políticas de Privacidad</a>
-                <a href="#">Términos del Servicio</a>
-            </nav>
-        </div>
+                <nav class="navegacion">
+                    <a href="#">Nuestra Historia</a>
+                    <a href="#">Misión, Visión y Valores</a>
+                    <a href="#">Carreras</a>
+                    <a href="#">Políticas de Privacidad</a>
+                    <a href="#">Términos del Servicio</a>
+                </nav>
+            </div>
 
-        <div>
-            <h3>Soporte</h3>
+            <div>
+                <h3>Soporte</h3>
 
-            <nav>
-                <a href="#">Preguntas Frecuentes</a>
-                <a href="#">Ayuda en Línea</a>
-                <a href="#">Confianza y Seguridad</a>
-            </nav>
+                <nav>
+                    <a href="#">Preguntas Frecuentes</a>
+                    <a href="#">Ayuda en Línea</a>
+                    <a href="#">Confianza y Seguridad</a>
+                </nav>
+            </div>
         </div>
 
         <p>Todos los derechos reservados, TiendaMuebles</p>
