--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <div>
                 <h3>Categorías</h3>
 
-                <nav id="navegacion">
+                <nav class="footer-menu">
                     <a href="#">Cocina</a>
                     <a href="#">Oficina</a>
                     <a href="#">Jardín</a>
@@ -168,7 +168,7 @@
             <div>
                 <h3>Sobre Nosotros</h3>
 
-                <nav class="navegacion">
+                <nav class="footer-menu">
                     <a href="#">Nuestra Historia</a>
                     <a href="#">Misión, Visión y Valores</a>
                     <a href="#">Carreras</a>
@@ -180,7 +180,7 @@
             <div>
                 <h3>Soporte</h3>
 
-                <nav>
+                <nav class="footer-menu">
                     <a href="#">Preguntas Frecuentes</a>
                     <a href="#">Ayuda en Línea</a>
                     <a href="#">Confianza y Seguridad</a>
@@ -188,10 +188,8 @@
             </div>
         </div>
 
-        <p>Todos los derechos reservados, TiendaMuebles</p>
+        <p class="copyright">Todos los derechos reservados, TiendaMuebles</p>
     </footer>
 
-
-    
 </body>
 </html>
