45 Pagina Nosotros creada

--- a/base.html
+++ b/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>e-commerce - Nosotros</title>
+    <title>e-commerce - Home</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,18 +33,7 @@
     </div>
 
     <main class="contenido-principal contenedor">
-        <h2 class="text-center">Sobre Nosotros</h2>
-
-        <div class="contenido-nosotros">
-            <div class="imagen">
-                <img src="img/nosotros.jpg" alt="Imagen Nosotros">
-            </div>
-            <div class="informacion-nosotros">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque maxime vero nisi provident, temporibus rem nemo, itaque soluta placeat blanditiis debitis alias dolorum labore dolorem modi enim ad! Repellat, sed.</p>
-
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid error dignissimos, totam vero itaque deserunt expedita ipsa provident beatae? Animi nulla fugiat, sapiente aspernatur dolorem delectus tenetur eius tempore consequuntur.</p>
-            </div>
-        </div>
+        <h2 class="text-center">Nuestros Productos</h2>
 
     </main>
 
