49 CSS aplicados al Blog

--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@
 
         <section class="contenedor-blog">
             <div class="blog">
-                <article>
+                <article class="entrada">
                         <h2>Guía de Colores</h2>
 
                         <div class="imagen">
@@ -55,9 +55,11 @@
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore iure ipsam voluptas veniam reiciendis fugit ut doloremque ea commodi, repudiandae quasi repellendus ipsum illum explicabo aliquid esse neque debitis nesciunt?</p>
                         </div>
 
+                        <a href="entrada.html" class="btn max-width-30">Leer</a>
+
                 </article>
 
-                <article>
+                <article class="entrada">
                     <h2>Guía de Colores</h2>
 
                     <div class="imagen">
@@ -75,10 +77,28 @@
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore iure ipsam voluptas veniam reiciendis fugit ut doloremque ea commodi, repudiandae quasi repellendus ipsum illum explicabo aliquid esse neque debitis nesciunt?</p>
                     </div>
 
+                    <a href="entrada.html" class="btn max-width-30">Leer</a>
+
             </article>
             </div>
 
             <aside>
+                <h3>Otras entradas del Blog</h3>
+
+                <ul>
+                    <li>
+                        <a href="entrada.html">Guía de Colores</a>
+                    </li>
+                    <li>
+                        <a href="entrada.html">Nuevos Modelos</a>
+                    </li>
+                    <li>
+                        <a href="entrada.html">Guía para diseño de interiores</a>
+                    </li>
+                    <li>
+                        <a href="entrada.html">Guía para diseño de exteriores</a>
+                    </li>
+                </ul>
 
             </aside>
         </section>
