54 Datos creados y agrupados

--- a/contacto.html
+++ b/contacto.html
@@ -36,8 +36,29 @@
         <h2 class="text-center">Contacto</h2>
 
         <form action="">
-            <label for="nombre">Nombre:</label>
-            <input type="text" placeholder="Ingresa tu nombre" id="nombre">
+            <fieldset>
+                <legend>Tus Datos</legend>
+
+                <div class="campo">
+                    <label for="nombre">Nombre:</label>
+                    <input type="text" placeholder="Tu nombre" id="nombre">
+                </div>
+
+                <div class="campo">
+                    <label for="asunto">Nombre:</label>
+                    <input type="text" placeholder="Tu asunto" id="asunto">
+                </div>
+            </fieldset>
+
+            <fieldset>
+                <legend>País</legend>
+
+            </fieldset>
+
+            <fieldset>
+                <legend>Información Extra</legend>
+
+            </fieldset>
         </form>
 
     </main>
