55 Inputs email y tel agregados

--- a/contacto.html
+++ b/contacto.html
@@ -45,9 +45,25 @@
                 </div>
 
                 <div class="campo">
-                    <label for="asunto">Nombre:</label>
-                    <input type="text" placeholder="Tu asunto" id="asunto">
+                    <label for="asunto">Asunto:</label>
+                    <input type="text" placeholder="Tu Asunto" id="asunto">
                 </div>
+
+                <div class="campo">
+                    <label for="email">E-mail:</label>
+                    <input type="email" placeholder="Tu E-mail" id="email">
+                </div>
+
+                <div class="campo">
+                    <label for="tel">Teléfono:</label>
+                    <input type="tel" placeholder="Tu Teléfono" id="tel">
+                </div>
+
+                <div class="campo">
+                    <label for="mensaje">Mensaje:</label>
+                    <textarea name="mensaje" id="" cols="30" rows="10"></textarea>
+                </div>
+
             </fieldset>
 
             <fieldset>
