--- a/contacto.html
+++ b/contacto.html
@@ -69,6 +69,21 @@
             <fieldset>
                 <legend>País</legend>
 
+                <div class="campo">
+                    <label for="pais">País</label>
+                    <select id="pais">
+                        <option disabled>-- Selecione --</option>
+                        <option value="MX">México</option>
+                        <option value="PR">Perú</option>
+                        <option value="CO">Colombia</option>
+                        <option value="AR" selected>Argentina</option>
+                        <option value="ES">España</option>
+                        <option value="CL">Chile</option>
+
+                    </select>
+
+                </div>
+
             </fieldset>
 
             <fieldset>
