--- a/contacto.html
+++ b/contacto.html
@@ -89,6 +89,16 @@
             <fieldset>
                 <legend>Información Extra</legend>
 
+                <div class="campo">
+                    <label for="cliente">Cliente</label>
+                    <input type="radio" name="tipo" id="cliente" value="cliente">
+                </div>
+
+                <div class="campo">
+                    <label for="proveedor">Proveedor</label>
+                    <input type="radio" name="tipo" id="proveedor" value="proveedor">
+                </div>
+
             </fieldset>
         </form>
 
