--- a/contacto.html
+++ b/contacto.html
@@ -99,6 +99,19 @@
                     <input type="radio" name="tipo" id="proveedor" value="proveedor">
                 </div>
 
+                <div class="campo">
+                    <label for="categoria">Categoría de Interés</label>
+                    <input list="categorias" name="categorias">
+                    <datalist id="categorias">
+                        <option value="Cocina"></option>
+                        <option value="Exterior"></option>
+                        <option value="Recamara"></option>
+                        <option value="Oficina"></option>
+                        <option value="Televisión"></option>
+                    </datalist>
+
+                </div>
+
             </fieldset>
         </form>
 
