61 CSS aplicado al Formulario

--- a/contacto.html
+++ b/contacto.html
@@ -35,7 +35,7 @@
     <main class="contenido-principal contenedor">
         <h2 class="text-center">Contacto</h2>
 
-        <form action="#">   <!-- Aquí, entre las commilas estaría la URL al que se enviaría el Form -->
+        <form class="formulario" action="#">   <!-- Aquí, entre las commilas estaría la URL al que se enviaría el Form -->
             <fieldset>
                 <legend>Tus Datos</legend>
 
@@ -114,7 +114,7 @@
 
             </fieldset>
 
-            <input type="submit" value="Enviar Formulario">
+            <input class="btn" type="submit" value="Enviar Formulario">
             <!-- <button type="submit">Enviar Formulario</button> -->
 
         </form>
